--- a/views/private/profile.hbs
+++ b/views/private/profile.hbs
@@ -1,54 +1,49 @@
-<div class="profileParent">
-    <h1>Hi, {{user.username}}!</h1>
-    <form action="/profile/{{_id}}" method="POST" enctype="multipart/form-data" class="postnewForm">
-      <div class="form-group" style="display: flex;flex-direction: column;align-items: center;gap: 1rem;">
-        <img id="profile-img" src="{{user.userPhotoUrl}}" alt="User-img" />
-        <input type="file" name="userPhotoUrl" />
-      </div>
+<div class="profile__parent">
+  <h1>Hi, {{user.username}}!</h1>
+  <form action="/profile/{{_id}}" method="POST" enctype="multipart/form-data" class="postnewForm">
+    <div class="form-group" style="display: flex;flex-direction: column;align-items: center;gap: 1rem;">
+      <img id="profile-img" src="{{user.userPhotoUrl}}" alt="User-img" />
+      <input type="file" name="userPhotoUrl" />
+    </div>
 
-        <label for="exampleInputEmail1">Email</label>
-        <input
-          type="email"
-          id="input-email"
-          aria-describedby="emailHelp"
-          value="{{user.email}}"
-        />
+    <label for="exampleInputEmail1">Email</label>
+    <input type="email" id="input-email" aria-describedby="emailHelp" value="{{user.email}}" />
 
-    
-        <label for="usernamme">Username</label>
-        <input type="text" name="username" value="{{user.username}}" />
-    
-        <label for="age">Age</label>
-        <input type="text" name="age" value="{{user.age}}" />
-        
-        <label for="genre">Genre</label>
-        <input type="text" name="genre" value="{{user.genre}}" />
-        
-        <label for="country">Country</label>
-        <input type="text" name="country" value="{{user.country}}" />
 
-        <label for="interests" class="label-flex">
-          <h4>Interests</h4>
-          <select name="interests" id="interests" multiple>
-            {{#each enumOptions}}
-              <option value="{{this}}">{{this}}</option>
-            {{/each}}
-          </select>
-        </label>
+    <label for="usernamme">Username</label>
+    <input type="text" name="username" value="{{user.username}}" />
 
-      <div>
-        <button type="submit" class="btn profileBtn">Update</button>
-      </div>
-    </form>
+    <label for="age">Age</label>
+    <input type="text" name="age" value="{{user.age}}" />
 
-    <form>
-      <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-      </div>
-      <div class="submitProfile">
-        <button type="submit" class="btn btn-primary profileSubBtn">Submit</button>
-      </div>
-    </form>
-  </div>
+    <label for="genre">Genre</label>
+    <input type="text" name="genre" value="{{user.genre}}" />
+
+    <label for="country">Country</label>
+    <input type="text" name="country" value="{{user.country}}" />
+
+    <label for="interests" class="label-flex">
+      <h4>Interests</h4>
+      <select name="interests" id="interests" multiple>
+        {{#each enumOptions}}
+        <option value="{{this}}">{{this}}</option>
+        {{/each}}
+      </select>
+    </label>
+
+    <div>
+      <button type="submit" class="btn profile__button">Update</button>
+    </div>
+  </form>
+
+  <form>
+    <div class="form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1" />
+      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    </div>
+    <div class="submitProfile">
+      <button type="submit" class="btn btn-primary profileSubBtn">Submit</button>
+    </div>
+  </form>
+</div>
 </div>
