--- a/views/home.hbs
+++ b/views/home.hbs
@@ -9,7 +9,7 @@
       <div class="card-content">
         <div class="text-cards">
           <h4>{{title}}</h4>
-          <div>
+          <div class="card__description">
             <p class="post-description">{{description}}</p>
           </div>
         </div>
