perf: :lipstick: restyle create post button and single-card border

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -109,16 +109,15 @@ nav {
   padding: 0.5em 1.5em;
 }
 
-.post-button > * {
+.post-button {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
   background-color: var(--yellow);
-  color: var(--dark-blue);
-  border-radius: 2rem;
+  border-radius: 0.5em;
   padding: 1rem;
-  margin-right: 12rem;
+}
+
+.post-button > a {
+  color: var(--dark-blue);
 }
 
 .nav-buttons {
@@ -488,9 +487,10 @@ select:focus {
 .single-card {
   min-height: 30em;
   background-color: var(--dark-blue);
+
   border-radius: 1em;
+  
   transition: 0.6s ease;
-  box-shadow: 0.3em 0.3em 0.7em rgba(100, 100, 100, 0.5);
 }
 
 .single-card:hover {
@@ -841,9 +841,6 @@ footer .fa-icons {
     text-align: center;
   }
 
-  .post-button a {
-    margin: 0;
-  }
   .match-scroller {
     display: grid;
     grid-auto-flow: column;
@@ -860,10 +857,6 @@ footer .fa-icons {
 #avatar {
   height: 50px;
   width: 50px;
-}
-
-.post-button a {
-  font-size: 1rem;
 }
 
   footer {
