--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,6 +1,6 @@
 <div class="signupParent">
   <div class="signup-container">
-    <h1>Sign up to yapic</h1>
+    <h1>Join yapic</h1>
     <h4>Share your photos and start meeting people! </h4>
     <form action="/signup" method="POST" class="signupForm">
       <div class="form-group">
