--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,37 +1,31 @@
-<div class="main-container">
-  {{! <h2>Waiting behind the tags...</h2> }}
-  <section class="section1">
-    <div>
-      <h2>What’s yapic?
-      </h2>
-      <p>yapic is a community that allows you to share your photos and
-        interests. If other users have similar tastes to yours, there is a
-        match! You can visit their profile and get in touch. Share your photos,
-        see interesting people and start chatting, that’s all!</p>
+<div class="index__container">
+  <div class="index__text">
+    <h1>Uncover the people behind the likes</h1>
+    <p>
+      A community that allows you to share your photos and interests. If other
+      users have similar tastes to yours, why not start chatting?
+    </p>
+    <div class="index__signup">
+      <a href="/signup">JOIN US</a>
     </div>
-    <img src="/images/section1.png" alt="" />
-  </section>
+  </div>
 
-  <section class="section2">
-    <img src="/images/section2.png" alt="" />
-    <div>
-      <h2>Let your amazing posts present you nice people
-      </h2>
-      <p>yapic simplify social networks and put real interaction on top. We aim
-        to build meaningful content to boost helathy relations among people.
-        Post, match and conect.</p>
-    </div>
-  </section>
+  <div class="index__illustration">
+    <img src="./images/illustration.svg" alt="illustration" />
+  </div>
+</div>
 
-  <section class="section3">
-    <div>
-      <h2>Giving people the power to build community and bring the world closer
-        together!
-      </h2>
-      <p>ALL ARE WELCOME! We’re committed to fostering a safe and supportive
-        community for everyone. Create compelling content that’s distinctly
-        yours.</p>
+<footer class="footer">
+    <div class="footer__text">
+      <p><small>&copy; Copyright 2022 PELOTUDOS Labs</small></p>
     </div>
-    <img src="/images/section3.png" alt="" />
-  </section>
+    <div class="fa-icons">
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-instagram"></a>
+    </div>
+</footer>
+
+<div class="index__waves">
+  <img src="./images/waves.svg" alt="waves image over footer">
 </div>
