--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,8 +5,13 @@
       A community that allows you to share your photos and interests. If other
       users have similar tastes to yours, why not start chatting?
     </p>
-    <div class="index__signup">
-      <a href="/signup">JOIN US</a>
+    <div class="index__buttons">
+      <div class="index__signup">
+        <a href="/signup">JOIN US</a>
+      </div>
+      <div class="index__login">
+          <a href="/login">LOG IN</a>
+      </div>
     </div>
   </div>
 
@@ -28,4 +33,16 @@
 
 <div class="index__waves">
   <img src="./images/waves.svg" alt="waves image over footer">
+</div>
+
+<div class="index__waves2">
+  <img src="./images/waves2.svg" alt="waves image over footer">
+</div>
+
+<div class="index__waves3">
+  <img src="./images/waves3.svg" alt="waves image over footer">
+</div>
+
+<div class="index__waves4">
+  <img src="./images/waves4.svg" alt="waves image over footer">
 </div>
