--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -38,7 +38,7 @@
         />
       </div>
       <div>
-        <button class="btn signupBtn" type="submit">Register</button>
+        <button class="signupBtn" type="submit">Register</button>
       </div>
 
     </form>
@@ -47,4 +47,27 @@
       <p class="alert alert-danger"><b>{{errorMessage}}</b></p>
     {{/if}}
   </div>
+</div>
+
+<footer class="footer">
+    <div class="footer__text">
+      <p><small>&copy; Copyright 2022 PELOTUDOS Labs</small></p>
+    </div>
+    <div class="fa-icons">
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-instagram"></a>
+    </div>
+</footer>
+
+<div class="index__waves">
+  <img src="./images/waves.svg" alt="waves image over footer">
+</div>
+
+<div class="index__waves2">
+  <img src="./images/waves2.svg" alt="waves image over footer">
+</div>
+
+<div class="index__waves3">
+  <img src="./images/waves3.svg" alt="waves image over footer">
 </div>
