--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -416,7 +416,7 @@ select:focus {
 
 .single-card {
   min-height: 30em;
-  background-color: var(--dark-blue);
+  background-color: var(--light-blue);
 
   border-radius: 1em;
 
@@ -435,27 +435,25 @@ select:focus {
   border-top-right-radius: 0.8em;
 }
 
+.single-card form {
+  margin: 0;
+}
+
 .card-content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  align-content: center;
-  justify-content: space-between;
+  gap: 1em;
 }
 
 .div-tags {
   display: flex;
-  margin-top: 4%;
 }
 
 .label-flex {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.single-card form {
-  margin-top: 7%;
 }
 
 .card-content h4 {
@@ -526,9 +524,9 @@ select:focus {
   align-items: center;
   text-align: center;
   background: none;
-  background-color: var(--main-pink);
+  background-color: var(--white);
   color: var(--dark-blue);
-  height: 2rem;
+  padding: 0.5em 1.5em;
 
   letter-spacing: 0.2rem;
   cursor: pointer;
@@ -540,12 +538,16 @@ select:focus {
 }
 
 .single-card .span-tags * {
-  background-color: rgba(200, 200, 200, 0.9);
-  padding: 0.5rem;
+  background-color: var(--ligth-pink);
+  padding: 0.7rem;
   border-radius: 2rem;
   font-size: var(--paragraph-size);
   font-weight: 300;
   color: var(--dark-blue);
+}
+
+.span-tags p {
+  margin: 0;
 }
 
 .btn:hover {
