--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,5 @@
 <div class="title-cards">
-  <h1>{{user.username}}'s Home</h1>
+  <h1>{{user.username}}'s Board</h1>
 </div>
 
 <div class="post-cards">
@@ -41,3 +41,9 @@
     </div>
   {{/each}}
 </div>
+
+<footer class="footer__board">
+  <div class="post__button">
+      <a href="/post/new">Post</a>
+    </div>
+</footer>
