--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -108,15 +108,27 @@ nav {
   padding: 0.5em 1.5em;
 }
 
-.post-button {
-  display: flex;
+.post__button {
   background-color: var(--yellow);
-  border-radius: 0.5em;
+  border-radius: 0.25em;
   padding: 1rem;
 }
 
-.post-button > a {
+.post__button:hover {
+  color: var(--white);
+}
+
+.post__button a {
   color: var(--dark-blue);
+}
+
+.post__button a:hover {
+  color: var(--white);
+}
+
+.footer__board {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .nav-buttons {
@@ -314,9 +326,16 @@ nav {
   margin-top: 2rem;
 }
 
-.createBtn {
+.post__button {
+  padding: 0.375em 0.75em;
   background-color: var(--ligth-pink);
   color: var(--dark-blue);
+  border: none;
+  border-radius: 0.25em;
+}
+
+.post__button:hover {
+  color: var(--white);
 }
 
 .inp {
@@ -386,7 +405,15 @@ select:focus {
 }
 
 .profile__button {
+  padding: 0.375em 0.75em;
   background-color: var(--ligth-pink);
+  color: var(--dark-blue);
+  border: none;
+  border-radius: 0.25em;
+}
+
+.profile__button:hover {
+  color: var(--white);
 }
 
 #interests::-webkit-scrollbar {
