--- a/views/post-creation.hbs
+++ b/views/post-creation.hbs
@@ -29,7 +29,7 @@
         </label>
 
       <div>
-        <button type="submit" class="btn createBtn">Create</button>
+        <button type="submit" class="post__button">Create</button>
       </div>
     </form>
 
