--- a/views/private/profile.hbs
+++ b/views/private/profile.hbs
@@ -9,7 +9,6 @@
     <label for="exampleInputEmail1">Email</label>
     <input type="email" id="input-email" aria-describedby="emailHelp" value="{{user.email}}" />
 
-
     <label for="usernamme">Username</label>
     <input type="text" name="username" value="{{user.username}}" />
 
@@ -32,8 +31,7 @@
     </label>
 
     <div>
-      <button type="submit" class="btn profile__button">Update</button>
+      <button type="submit" class="profile__button">Update</button>
     </div>
   </form>
-</div>
 </div>
