--- a/views/home.hbs
+++ b/views/home.hbs
@@ -44,6 +44,6 @@
 
 <footer class="footer__board">
   <div class="post__button">
-      <a href="/post/new">Post</a>
+      <a href="/post/new">New Post</a>
     </div>
 </footer>
