fix transparency wave image

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -32,7 +32,7 @@
 </footer>
 
 <div class="index__waves">
-  <img src="./images/waves.svg" alt="waves image over footer">
+  <img src="./images/waves-test.svg" alt="waves image over footer">
 </div>
 
 <div class="index__waves2">
