--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -69,7 +69,7 @@ span a {
   color: var(--ligth-pink);
 }
 
-img, 
+img,
 picture {
   max-width: 100%;
   display: block;
@@ -87,8 +87,9 @@ nav {
   height: 8%;
 }
 
-.yapic-letters {
-  height: 190%;
+.yapic__logo {
+  max-width: 20rem;
+  min-width: 15rem;
 }
 
 .login > * {
@@ -337,8 +338,6 @@ nav {
   margin-top: 2rem;
 }
 
-
-
 .inp {
   text-align: center;
   margin: auto;
@@ -435,15 +434,14 @@ select:focus {
 }
 
 .stacked > * {
-  grid-column:  1/2;
+  grid-column: 1/2;
   grid-row: 1/2;
 }
 
 .home__grid {
   display: grid;
-  grid-template-columns:
-    repeat(auto-fit, minmax(30rem, 1fr));
-  gap: .5rem;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 0.5rem;
 
   margin: 8rem;
 }
@@ -473,7 +471,7 @@ select:focus {
   align-items: center;
   gap: 1em;
 
-  margin: .5rem .5rem 2rem;
+  margin: 0.5rem 0.5rem 2rem;
   padding: 2rem;
   background-color: var(--light-blue);
 
@@ -526,8 +524,6 @@ select:focus {
     font-size: 3rem;
   }
 }
-
-
 
 /* Match Scrolling */
 .match-scroller {
@@ -863,6 +859,10 @@ footer .fa-icons {
 }
 
 @media screen and (min-width: 426px) and (max-width: 767px) {
+  .nav-bar {
+    justify-content: center;
+  }
+
   .index__container {
     flex-direction: column-reverse;
 
@@ -956,9 +956,7 @@ footer .fa-icons {
 }
 
 @media screen and (max-width: 425px) {
-  .nav-bar {
-    justify-content: center;
-  }
+  
 
   .index__container {
     display: flex;
