--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,7 +22,7 @@
 
 <footer class="footer">
     <div class="footer__text">
-      <p><small>&copy; Copyright 2022 PELOTUDOS Labs</small></p>
+      <p><small>&copy; Copyright 2022</small></p>
     </div>
     <div class="fa-icons">
       <a href="#" class="fa fa-facebook"></a>
